# kratos_submission

./: README.md
kratos_ritwikkumar/: CMakeLists.txt  package.xml
kratos_ritwikkumar/kratos_ritwikkumar/: clock_publisher.py  fk_publisher_node.py  hello_publisher_q1.py  hello_subscriber_q1.py  ik_controller_node.py  rover_status_publisher.py  s1_controller_q2.py  s2_controller_q2.py
kratos_ritwikkumar/msg/: RoverStatus.msg
